dash and treasury fix

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -33,9 +33,7 @@
   border-radius: 4px;
   background: #1F008C;
   transition: background 0.3s ease;
-  margin: 20px;
-  margin-bottom: 40px;
-  text-align: center;
+  margin-top: 12px;
 }
 
 .btn-bleu:hover {
