--- a/app/assets/stylesheets/components/_dashboards.scss
+++ b/app/assets/stylesheets/components/_dashboards.scss
@@ -1,120 +1,41 @@
-// For the Dash navbar (item / adive / notes)
-.dash-nav {
-  margin-top: 120px;
-  width: 1100px;
-  background: #eff4fb;
+.container-title {
+  margin-left: 200px;
+}
+
+.card-page {
+  width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: start;
-  height: 30px;
-  color: rgba(0, 0, 0, 0.3);
-  border-bottom: solid 1px #1f008c;
-  margin-bottom: 20px;
-}
-
-.dash-nav p{
-  margin-right: 110px;
-  margin-left: 10px;
-  margin-bottom: 10px;
-  color: #1f008c;
-}
-
-// Card for the graph
-// .card-graph {
-//   // display: flex;
-//   // width: 700px;
-//   // height: 350px;
-//   // top: 180px;
-//   justify-content: center;
-//   align-items: center;
-//   color: white;
-//   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-//   margin: 20px;
-// }
-
-//Card for the table
-
-.card-dash {
   justify-content: center;
-  align-items: center;
-  color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-left: 10px;
 }
 
-.card-table p{
+.cards-page {empty-cells: show;
+    background-position: center;
+    height: 220px;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    margin: 20px;
+    padding: 8px;
+    padding-left: 12px;
+  }
+
+.card-page h4{
+  color: black
+}
+
+.card-page h2{
+  text-align: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.card-page h5{
+  text-align: center;
+  align-items: center;
   color: black;
-  font-size: small;
-  text-align: center;
-  margin-top: 10px;
-}
-
-.card-table th{
-  color: black;
-  font-size: small;
-  text-align: center;
-  margin-top: 10px;
-}
-
-//Table design
-
-.divTable
-{
-  display: table;
-  width: auto;
-  justify-content: center;
-  align-items: center;
-  background-color:rgb(255, 255, 255);
-  border-spacing:1px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-left: 10px;
-  padding: 10px;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  border-radius: 5px;
-}
-
-.divTableAll
-{
-  display: table;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  background-color:rgb(255, 255, 255);
-  border-spacing:1px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-left: 10px;
-  padding: 10px;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  border-radius: 5px;
-}
-
-
-
-.divRow
-{
-  display: table-row;
-  display: felx;
-  justify-content: around;
-  width: 100%;
-  text-align: center;
-  border-bottom: dashed 1px #1f008c;
-
-}
-
-.divCell {
-  float:left;/*fix for  buggy browsers*/
-  display:table-column;
-  width:150px;
-  background-color:rgb(255, 255, 255);
-  text-align: center;
-  margin-top: 2px;
-  margin-bottom: 2px;
 }
