--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
+<%= render 'shared/flashes' %>
+<%= render 'shared/navbar' %>
+
 <div class="banner" style="background-image: linear-gradient(182deg, rgb(31,0,140),rgb(31,0,140))">
   <div class="container">
     <div class="row align-items-center">
