--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/side-nav' %>
+
 <div class="container-title">
   <h2 class="title-dash">Hello <strong class="highlight"><%= @current_user.email%> </strong></h5>
   <h5>Welcome to Decidesk, let’s get this accounting party started !</h5>
