--- a/app/views/expenditures/transactions.html.erb
+++ b/app/views/expenditures/transactions.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/side-nav' %>
 <div class="container">
   <div class="row justify-content-center">
       <h1 class ="mt-4" style= color:#1E0087>At a glance: all the information you need about your treasury</h1>
