--- a/app/views/expenditures/show.html.erb
+++ b/app/views/expenditures/show.html.erb
@@ -4,6 +4,12 @@
       <h1 class ="mt-4" style= color:#1E0087>At a glance: all the information you need about your treasury</h1>
   </div>
 
+  <!-- <div>
+    <h4>Report name</h4>
+    <p>Start</p>
+    <p>Start</p>
+  </div> -->
+
   <div class="dash-nav">
     <p><%= link_to "Expenditures", report_expenditures_path, class: "tab-underlined active" %></p>
     <p><%= link_to "Advice", report_expenditures_advice_path, class: "tab-underlined" %></p>
@@ -14,6 +20,10 @@
       <option value="1">Monthly</option>
       <option value="2">Weeekly</option>
     </select>
+  </div>
+
+  <div class="row d-flex justify-content-center mb-5 mt-5">
+     <h4>Your total expenditures for the period are <strong class="highlight">€ <%= number_with_delimiter(@total_expenditures, :delimiter => ',') %></strong></h4>
   </div>
 
   <div class="col-lg-12 card-dash row justify-content-center">
@@ -38,9 +48,9 @@
         <h3 style= color:#1E0087>Top expenditure items this year</h3>
          <thead>
            <tr>
-            <th scope="col">Item</th>
-            <th scope="col">Date</th>
             <th scope="col">Expenditure</th>
+            <th scope="col">Date</th>
+            <th scope="col">Amount</th>
            </tr>
          </thead>
          <tbody>
