--- a/app/views/expenditures/show.html.erb
+++ b/app/views/expenditures/show.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/side-nav' %>
 <div class="container">
   <div class="row justify-content-center">
-      <h1 class ="mt-4" style= color:#1E0087>At a glance: all the information you need about your treasury</h1>
+      <h1 class ="mt-4" style= color:#1E0087>At a glance: all you need to know about your expenditures</h1>
   </div>
 
   <!-- <div>
