--- a/app/assets/stylesheets/components/_side_nav.scss
+++ b/app/assets/stylesheets/components/_side_nav.scss
@@ -16,6 +16,7 @@
     font-size: 25px;
     color: $light-gray;
     display: block;
+    transition: background 0.3s ease;
   }
   
   .sidenav a:hover {
