--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,9 @@
 
     <body>
 
-      <div class="margin-nav main">
+      <div>
         <%= yield %>
       </div>
     </body>
-    <%= render 'shared/footer' %>
 </html>
 
