--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,5 +1,3 @@
 <h1>Hello</h1>
 
-<% if policy(Report).create? %>
-  <%= link_to "New report", new_report_path %>
-<% end %>
+<%= render 'reports/form' %>
