--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col">
-        <h1> We help you to indentify <strong class="highlight">business opportunities</strong> out of <strong>conformity constraints</strong>.</h1>
+        <h1> We help you to identify <strong class="highlight">business opportunities</strong> out of <strong>conformity constraints</strong>.</h1>
         <p>Import, analyse, decide !</p>
         <a class="btn-flat" href="#">Discover</a>
       </div>
