--- a/app/views/treasuries/transactions.html.erb
+++ b/app/views/treasuries/transactions.html.erb
@@ -2,11 +2,11 @@
 
 <div class="container">
 
-  <div>
+  <%# <div>
     <h4>Report name</h4>
     <p>Start</p>
     <p>Start</p>
-  </div>
+  </div> %>
 
 
   <div class="dash-nav">
