--- a/app/views/treasuries/advise.html.erb
+++ b/app/views/treasuries/advise.html.erb
@@ -2,16 +2,16 @@
 
 <div class="container">
 
-  <div>
+  <%# <div>
     <h4>Report name</h4>
     <p>Start</p>
     <p>Start</p>
-  </div>
+  </div> %>
 
 
   <div class="dash-nav">
     <p><%= link_to "Treasury", report_treasury_path %></p>
-    <p><%= link_to "Advise", report_treasury_advise_path %></p>
+    <p><%= link_to "Advice", report_treasury_advise_path %></p>
     <p><%= link_to "Notes", report_treasury_comments_path %></p>
     <p><%= link_to "All Transactions", report_treasury_transactions_path %></p>
     <select class="form-select" aria-label="Default select example">
