--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -7,21 +7,21 @@
 <div class="card-page">
   <div class="col-lg-3 cards-page">
     <h4> Total <strong class="highlight">Treasury</strong></h4>
-    <h2> <strong class="highlight text-center"><%= @treasury_balance.to_i %> € </strong></h2>
+    <h2> <strong class="highlight text-center"><%= number_with_delimiter(@treasury_balance.to_i, :delimiter => ',') %> € </strong></h2>
     <h5>at <%=  @treasury_last_day.ecriture_date.strftime("%d %B %Y")%></h5>
     <div class="text-center"><%= link_to "See details", report_treasury_path(@last_report), class: "btn btn-bleu" %></div>
   </div>
 
    <div class="col-lg-3 cards-page ">
       <h4>Total <strong class="highlight">Sales</strong></h4>
-      <h2> <strong class="highlight text-center"><%= @treasury_balance.to_i %> € </strong></h2>
+      <h2> <strong class="highlight text-center">1,494,955 € </strong></h2>
     <h5>at <%=  @treasury_last_day.ecriture_date.strftime("%d %B %Y")%></h5>
       <div class="text-center"><%= link_to "See details", report_sales_path(@last_report), class: "btn btn-bleu" %></div>
    </div>
 
    <div class="col-lg-3 cards-page">
       <h4>Total <strong class="highlight">Expenditure</strong></h4>
-      <h2> <strong class="highlight text-center"><%= @treasury_balance.to_i %> € </strong></h2>
+      <h2> <strong class="highlight text-center"> 1,585,073 € </strong></h2>
     <h5>at <%=  @treasury_last_day.ecriture_date.strftime("%d %B %Y")%></h5>
       <div class="text-center"><%= link_to "See details", report_expenditures_path(@last_report), class: "btn btn-bleu" %></div>
 
