--- a/app/views/treasuries/transactions.html.erb
+++ b/app/views/treasuries/transactions.html.erb
@@ -11,7 +11,7 @@
 
   <div class="dash-nav">
     <p><%= link_to "Treasury", report_treasury_path %></p>
-    <p><%= link_to "Advise", report_treasury_advise_path %></p>
+    <p><%= link_to "Advice", report_treasury_advise_path %></p>
     <p><%= link_to "Notes", report_treasury_comments_path %></p>
     <p><%= link_to "All Transactions", report_treasury_transactions_path %></p>
     <select class="form-select" aria-label="Default select example">
