--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -396,12 +396,12 @@
     </div>  
     <div class="card">
       <img src="" alt="">
-      <h4>2 - Upload it on DeciDesk</h4>
+      <h4><strong class="highlight">2 - Upload it on DeciDesk</strong></h4>
       <p>Upload the file on your DeciDesck account !</p>
     </div>  
     <div class="card">
       <img src="" alt="">
-      <h4>3 - Let us do the magic</h4>
+      <h4><strong class="highlight">3 - Let us do the magic</strong></h4>
       <p>Consult the results of the analysis on your dashboard !</p>
     </div>  
   </div>
