--- a/app/views/treasuries/show.html.erb
+++ b/app/views/treasuries/show.html.erb
@@ -21,7 +21,7 @@
   </div>
 
   <div class="row d-flex justify-content-center mb-5 mt-5">
-    <h4>Your cash is at <strong class="highlight"><%= @balance_last_day.to_i %> € </strong>on <%= @treasury_last_day.ecriture_date.strftime("%d %B %Y") %> </h4>
+    <h4>Your cash is at <strong class="highlight">€ <%= number_with_delimiter(@balance_last_day.to_i, :delimiter => ',') %> € </strong>on <%= @treasury_last_day.ecriture_date.strftime("%d %B %Y") %> </h4>
   </div>
 
   <div class="row d-flex justify-content-around">
@@ -43,7 +43,7 @@
          <% Line.monthly_cash.each do |key, value| %>
            <div class="divRow d-flex justify-content-around">
              <div class="divCell"> <%= key.strftime("%b %Y") %></div>
-             <div class="divCell"> <%= value %> € </div>
+             <div class="divCell">€ <%= number_with_delimiter(value.to_i, :delimiter => ',') %> </div>
            </div> 
          <% end %>
       </div>
@@ -60,7 +60,7 @@
          <% Line.weekly_cash.each do |key, value| %>
            <div class="divRow d-flex justify-content-around">
              <div class="divCell"> <%= key.strftime("%d %B %Y") %></div>
-             <div class="divCell"> <%= value %> € </div>
+             <div class="divCell">€ <%= number_with_delimiter(value.to_i, :delimiter => ',') %></div>
            </div> 
          <% end %>
       </div>
@@ -81,7 +81,7 @@
            <div class="DivRow d-flex justify-content-around">
              <div class="divCell"><%= line.compte_num %></div>
              <div class="divCell"> <%= line.ecriture_date.strftime('%d %B %Y') %></div>
-             <div class="divCell"> <%= line.debit %> €</div>
+             <div class="divCell">€ <%= number_with_delimiter(line.debit.to_i, :delimiter => ',') %></div>
            </div> 
          <% end %>
       </div>
@@ -98,7 +98,7 @@
           <div class="DivRow d-flex justify-content-around">
             <div class="divCell"><%= line.compte_num %></div>
             <div class="divCell"><%= line.ecriture_date.strftime('%d %B %Y') %></div>
-            <div class="divCell">- <%= line.credit %> €</div>
+            <div class="divCell">€ - <%= number_with_delimiter(line.credit.to_i, :delimiter => ',') %></div>
           </div>
         <% end %>
       </div>
