show index & front

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -31,7 +31,7 @@
   color: white;
   padding: 8px 24px;
   border-radius: 4px;
-  background: #1F008C;
+  background: $blue;
   transition: background 0.3s ease;
   margin-top: 12px;
 }
@@ -45,7 +45,7 @@
   color: white;
   padding: 0px 8px;
   border-radius: 4px;
-  background: #1F008C;
+  background: $blue;
   transition: background 0.3s ease;
 }
 
