--- a/app/views/treasuries/transactions.html.erb
+++ b/app/views/treasuries/transactions.html.erb
@@ -46,7 +46,7 @@
     
         <% @lines.each do |line| %>
           <div class="divRow d-flex justify-content-around"> 
-          <div class="divCell"> <%= line.compte_num %></div>
+          <div class="divCell"> <%= line.compte_lib %></div>
           <div class="divCell"> <%= line.ecriture_date %></div>
       
           <% if line.debit == 0 %>
