--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -46,7 +46,7 @@
 }
 
 .card:hover{
-  border: 1.5px solid black;
+  border: 1.5px solid $green;
   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
   transform: translate3d(0, 0, 0);
 }
