--- a/app/assets/stylesheets/components/_side_nav.scss
+++ b/app/assets/stylesheets/components/_side_nav.scss
@@ -32,7 +32,11 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-   
+}
+
+.sidenav img:hover {
+  text-decoration: none;
+
 }
 
 .nav-links {
