--- a/app/assets/stylesheets/components/_table.scss
+++ b/app/assets/stylesheets/components/_table.scss
@@ -2,7 +2,7 @@ table {
   table-layout: fixed;
   width: 100%;
   border-collapse: collapse;
-  border: 1px solid blue;
+  border: 1px solid $blue;
 }
 
 thead th:nth-child(1) {
