--- a/app/assets/stylesheets/components/_pages.scss
+++ b/app/assets/stylesheets/components/_pages.scss
@@ -1,14 +1,15 @@
 // For the Dash navbar (item / adive / notes)
 .dash-nav {
-  margin-top: 120px;
-  width: 1100px;
-  background: #eff4fb;
+  margin-top: 0px;
+  margin-left: 200px;
+  width: 100%;
+  background: #04C586;
   display: flex;
   align-items: center;
-  justify-content: start;
-  height: 30px;
+  justify-content: center;
+  height: 80px;
   color: rgba(0, 0, 0, 0.3);
-  border-bottom: solid 1px $blue;
+  border-bottom: solid 1px #1F008C;
   margin-bottom: 20px;
 }
 
