--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -3,31 +3,47 @@
 <div class="container">
   <div class="container-index">
 
-  <h1 class="main-title"><strong class="highlight">Hello you !</strong></h1>
-  <h3 class="sub-title">Welcome to Decidesk, let’s get this accounting party started !</h3>
-
-  <div class="card-page">
-    <div class="col-lg-12 cards-page">
-      <h4 class="text-center"><strong class="highlight">New Analysis</strong></h4>
-      <div class="text-center">
-      <%= link_to "Import a FEC !", new_report_path, class: "btn btn-bleu" %></div>
+    <h1 class="main-title"><strong class="highlight">Hello you !</strong></h1>
+    <h3 class="sub-title">Welcome to Decidesk, let’s get this accounting party started !</h3>
+  
+    <div class="card-page">
+      <div class="col-lg-12 cards-page">
+        <h4 class="text-center"><strong class="highlight">New Analysis</strong></h4>
+        <div class="text-center">
+        <%= link_to "Import a FEC !", new_report_path, class: "btn btn-bleu" %></div>
+      </div>
     </div>
-  </div>
-
-  <div class="card-page">
-    <div class="col-lg-12 cards-page">
-      <h4 class="text-center"><strong class="highlight">Your previous analysis</strong> (<%= @current_user.reports.all.count %>)</h4>
-      
-      <% if @current_user.reports %>    
-        <% @current_user.reports.all.each do |report| %>
-          <div class="divRow d-flex justify-content-around">
-            <p class="divCell"><%= report.name %></p>
-            <p class="divCell"><%= report.created_at.strftime("%b %Y") %></p>
-            <p class="divCell"><%= link_to "See details", report_path(report.id), class: "btn btn-small" %></p>
-          </div> 
+  
+    <div class="card-page">
+      <div class="col-lg-12 cards-page">
+        <h4 class="text-center"><strong class="highlight">Your previous analysis</strong> (<%= @current_user.reports.all.count %>)</h4>
+        <% if @current_user.reports %>    
+          <% @current_user.reports.all.each do |report| %>
+            <div class="divRow d-flex justify-content-around">
+              <p class="divCell"><%= report.name %></p>
+              <p class="divCell"><%= report.created_at.strftime("%b %Y") %></p>
+              <p class="divCell"><%= link_to "See details", report_path(report.id), class: "btn btn-small" %></p>
+            </div> 
+          <% end %>
         <% end %>
-         <% end %>
+      </div>
     </div>
   </div>
-</div>
-</div>
+
+  <div class="card-page mb-5">
+    <div class="col-lg-12 cards-page">
+      <h4 class="text-center mb-5"><strong class="highlight">Your activity on DeciDesk</strong></h4>
+      <div class="row mt-3">
+        <div class="col text-center"><h5><strong class="highlight-blue"><%= number_with_delimiter(@current_user.reports.all.count, :delimiter => ',') %></strong></h5></div>
+        <div class="col text-center"><h5><strong class="highlight-blue"><%= number_with_delimiter(@current_user.lines.all.count, :delimiter => ',') %></strong> </h5></div> 
+        <div class="col text-center"><h5><strong class="highlight-blue"><%= number_with_delimiter(@current_user.lines.all.count, :delimiter => ',') %></strong> </h5></div>           
+      </div>
+      <div class="row mt-3"> 
+        <div class="col text-center"><h5>Reports uploaded</h5></div>
+        <div class="col text-center"><h5>Lines Analysed</h5></div>
+        <div class="col text-center"><h5>Lines Analysed</h5></div>
+      </div>
+    </div>
+  </div>
+  
+ </div>
