--- a/app/views/shared/_side-nav.html.erb
+++ b/app/views/shared/_side-nav.html.erb
@@ -1,5 +1,5 @@
 <div class="sidenav">
-  <%= link_to reports_path, class: "navbar-brand" do %>
+  <%= link_to reports_path, class: "text-muted" do %>
     <%= image_tag "logo-white.png" %>
   <% end %> 
   <div class="user">
