donut chart added

--- a/app/views/expenditures/show.html.erb
+++ b/app/views/expenditures/show.html.erb
@@ -39,7 +39,8 @@
 <div class="col-lg-6 card-dash row justify-content-center">
   <h3 style= color:#1E0087>Expenditures per category</h3>
   <br>
-    <%= pie_chart Line.top_expenditures_subcategory, legend: "right" %>
+    <%= pie_chart Line.top_expenditures_subcategory, donut: true, legend: "right" %>
+
 </div>
 
 
