--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: #1F008C;
+  background: #0C2556;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -22,5 +22,5 @@
 
 .navbar-title {
   color: $light-gray;
-  
+
 }
