--- a/app/assets/stylesheets/components/_utilities.scss
+++ b/app/assets/stylesheets/components/_utilities.scss
@@ -9,3 +9,20 @@
 .mb40{
   margin-bottom: 40px;
 }
+
+.flex-container {
+  display: flex;
+  align-items: center;
+}
+
+.dd-title{
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 12px;
+  color: white;
+  font-family: 'Lato', sans-serif;
+}
+
+.pr-10{
+  padding-right: 10px;
+}
