--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,4 +1,5 @@
 <%= render 'shared/side-nav' %>
+<%= render 'shared/analyses-navbar' %>
 
 <div class="container-title mt-5">
   <h1 class="main-title"><strong class="highlight">Hello again</strong></h1>
