--- a/app/assets/stylesheets/components/_pages.scss
+++ b/app/assets/stylesheets/components/_pages.scss
@@ -36,15 +36,12 @@
 //Card for the table
 
 .card-dash {
-  justify-content: center;
-  align-items: center;
-  color: white;
+  background-color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-left: 10px;
+  margin: 20px 10px;
+  padding: 20px;
 }
 
 .card-table p{
