--- a/app/views/expenditures/show.html.erb
+++ b/app/views/expenditures/show.html.erb
@@ -1,14 +1,9 @@
 <%= render 'shared/side-nav' %>
-<div class="container ml200">
-  <div class="row justify-content-center">
-      <h1 class ="mt-4" style= color:#1E0087>At a glance: all you need to know about your expenditures</h1>
-  </div>
 
-  <!-- <div>
-    <h4>Report name</h4>
-    <p>Start</p>
-    <p>Start</p>
-  </div> -->
+<div class="ml200">
+  <div class="">
+    <h1 class ="mt-4" style= color:#1E0087>At a glance: all you need to know about your expenditures</h1>
+  </div>
 
   <div class="dash-nav">
     <p><%= link_to "Expenditures", report_expenditures_path, class: "tab-underlined active" %></p>
@@ -22,64 +17,61 @@
     </select>
   </div>
 
-  <div class="row d-flex justify-content-center mb-5 mt-5">
-     <h4>Your total expenditures for the period are <strong class="highlight">€ <%= number_with_delimiter(@total_expenditures, :delimiter => ',') %></strong></h4>
+  <div class="d-flex justify-content-between p-3">
+
+    <div class="d-flex flex-column" style="min-width: 45%">
+      <div class="card-dash">
+        <h3 style= color:#1E0087>Monthly Expenditures</h3>
+        <br>
+        <%= column_chart Line.annual_expenditures %>
+      </div>
+
+      <div class="card-dash">
+        <h3 style= color:#1E0087>Expenditures per category</h3>
+        <br>
+        <%= pie_chart Line.top_expenditures_subcategory, prefix: "€", thousands: ",", download: true, donut: true, legend: "right" %>
+      </div>
+    </div>
+
+    <div class="d-flex flex-column" style="max-width: 53%">
+      <div class="d-flex justify-content-between">
+        <div class="card-dash p-4 text-center" style="min-width: 45%; color: #999">
+          <h4>Total <strong class="highlight">Expenditures</strong></h4>
+          <h2 style="font-size: 1.5rem"> <strong class="highlight text-center"> 1,585,073 € </strong></h2>
+          <p class="m-0">+6%</p>
+        </div>
+
+        <div class="card-dash p-4 text-center" style="min-width: 45%; color: #999">
+          <h4>Total <strong class="highlight">Sales</strong></h4>
+          <h2 style="font-size: 1.5rem"> <strong class="highlight text-center"> 1,494,955 € </strong></h2>
+          <p class="m-0">-6%</p>
+        </div>
+      </div>
+
+
+      <div class="card-dash">
+        <table class="table">
+          <h3 style= color:#1E0087>Top expenditure items this year</h3>
+           <thead>
+             <tr>
+              <th scope="col">Expenditure</th>
+              <th scope="col">Date</th>
+              <th scope="col">Amount</th>
+             </tr>
+           </thead>
+           <tbody>
+            <% @top5_expenditures.each do |line| %>
+              <tr>
+                <th scope="row"><%= line.ecriture_lib %></th>
+                <td><%= line.ecriture_date%></td>
+                <td><%= line.debit%>€</td>
+              </tr>
+            <% end %>
+           </tbody>
+        </table>
+        <p class = "row justify-content-center"><%= link_to "Show more", report_expenditures_transactions_path(@report), class: "tab-underlined" %></p>
+      </div>
+    </div>
   </div>
-
-  <div class="col-lg-12 card-dash row justify-content-center">
-    <h3 style= color:#1E0087>Monthly Expenditures</h3>
-    <br>
-    <%= column_chart Line.annual_expenditures %>
-  </div>
-
-<br>
-<br>
-
- <div class="row d-flex justify-content-between">
-<div class="col-lg-6 card-dash row justify-content-center">
-  <h3 style= color:#1E0087>Expenditures per category</h3>
-  <br>
-    <%= pie_chart Line.top_expenditures_subcategory, donut: true, legend: "right" %>
 
 </div>
-
-
-<div class="col-lg-5 card-dash">
-      <table class="table">
-        <h3 style= color:#1E0087>Top expenditure items this year</h3>
-         <thead>
-           <tr>
-            <th scope="col">Expenditure</th>
-            <th scope="col">Date</th>
-            <th scope="col">Amount</th>
-           </tr>
-         </thead>
-         <tbody>
-          <% @top5_expenditures.each do |line| %>
-            <tr>
-              <th scope="row"><%= line.ecriture_lib %></th>
-              <td><%= line.ecriture_date%></td>
-              <td><%= line.debit%>€</td>
-            </tr>
-          <% end %>
-         </tbody>
-      </table>
-      <p class = "row justify-content-center"><%= link_to "Show more", report_expenditures_transactions_path(@report), class: "tab-underlined" %></p>
-
-    </div>
-    </div>
-
-<!--     <div class="row justify-content-center">
-    <ul class="list-inline tabs-underlined">
-      <li>
-        <%= link_to "Expenditures", report_expenditures_path, class: "tab-underlined active" %>
-      </li>
-      <li>
-        <%= link_to "Advice", report_expenditures_path, class: "tab-underlined" %>
-      </li>
-      <li>
-        <%= link_to "Comments", report_expenditures_path, class: "tab-underlined" %>
-      </li>
-    </ul>
-  </div>
-</div> -->
